# AliceAndMe

./: CMakeLists.txt  README.md  index.html  main.js  package-lock.json  package.json  readme  script.js
components/: hoverImageChanger.js  timeImgSelector.js
config/: timeMapConfig.js
old/: electron.txt  styles.css
src/: main.cpp  renderer.h  texture_loader.h  time_map.h  window.h
tests/: timeImgSelector.test.js
